--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -7,11 +7,20 @@
     android:background="@color/darkblue"
     tools:context=".SeatScreen">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="180dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_begin="1072dp" />
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="185dp"
         android:layout_height="44dp"
-        android:layout_marginStart="776dp"
+        android:layout_marginStart="788dp"
         android:layout_marginTop="76dp"
         android:fontFamily="@font/bungee_inline"
         android:gravity="center"
@@ -86,11 +95,9 @@
         android:id="@+id/sliderlayout_ID"
         android:layout_width="247dp"
         android:layout_height="246dp"
-        android:layout_marginStart="288dp"
-        android:layout_marginTop="170dp"
-        android:layout_marginBottom="55dp"
+        android:layout_marginStart="260dp"
+        android:layout_marginTop="235dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -122,13 +129,11 @@
     <LinearLayout
         android:layout_width="87dp"
         android:layout_height="235dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="154dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginTop="243dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView3"
@@ -163,9 +168,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="132dp"
-        android:layout_height="320dp"
-        android:layout_marginTop="185dp"
+        android:layout_width="131dp"
+        android:layout_height="341dp"
+        android:layout_marginTop="172dp"
         android:layout_marginEnd="290dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -213,8 +218,8 @@
         android:id="@+id/linearLayout2"
         android:layout_width="428dp"
         android:layout_height="52dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="148dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -251,8 +256,8 @@
     <LinearLayout
         android:layout_width="69dp"
         android:layout_height="247dp"
-        android:layout_marginTop="292dp"
-        android:layout_marginEnd="676dp"
+        android:layout_marginTop="236dp"
+        android:layout_marginEnd="684dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -300,8 +305,8 @@
     <LinearLayout
         android:layout_width="431dp"
         android:layout_height="37dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="132dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -338,53 +343,59 @@
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="183dp" />
+        app:layout_constraintGuide_begin="183dp"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="616dp" />
+        app:layout_constraintGuide_begin="661dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="135dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="136dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="507dp" />
+        app:layout_constraintGuide_begin="136dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/stopchairButton_ID"
         android:layout_width="110dp"
         android:layout_height="120dp"
-        android:layout_marginTop="540dp"
-        android:layout_marginEnd="176dp"
-        android:backgroundTint="#D61D3F"
+        android:layout_marginEnd="40dp"
 
+        android:layout_marginBottom="164dp"
+        android:backgroundTint="#D61D3F"
         android:backgroundTintMode="src_in"
         android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="117dp"
         android:layout_height="50dp"
-        android:layout_marginStart="324dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginStart="348dp"
+        android:layout_marginTop="504dp"
         android:background="@drawable/rounded_corners"
         android:text="Save"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="140dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintGuide_begin="579dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
