--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -8,179 +8,196 @@
     tools:context=".MusicScreen">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="180dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_begin="1158dp" />
+
     <Button
         android:id="@+id/button_save_favorite"
-        android:layout_width="150dp"
+        android:layout_width="117dp"
         android:layout_height="50dp"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="450dp"
-        android:background="#00BCD4"
-        android:text="@string/save_favorite_button"
+        android:layout_marginBottom="200dp"
+        android:background="@drawable/rounded_corners"
+        android:text="@string/save_favorite"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="150dp"
+        android:layout_width="117dp"
         android:layout_height="50dp"
-        android:layout_marginTop="450dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="100dp"
-        android:background="#E80F0F"
-        android:text="@string/play_favorite_button"
-        android:textColor="#F6F0F0"
+        android:layout_marginStart="930dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="208dp"
+        android:background="@drawable/red_rounded_corners"
+        android:text="@string/play_favorite"
+        android:textColor="#0B0A0A"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
-
-    <ImageButton
-        android:id="@+id/berg_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/berg"
-        android:contentDescription="@string/berg"
-        app:layout_constraintEnd_toStartOf="@+id/dschungel_button"
-        app:layout_constraintHorizontal_bias="0.458"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/dschungel_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/dschungel"
-        android:contentDescription="@string/dschungel"
-        app:layout_constraintBottom_toTopOf="@+id/strand_button"
-        app:layout_constraintEnd_toStartOf="@+id/lagerfeuer_button"
-        app:layout_constraintStart_toEndOf="@+id/berg_button"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/lagerfeuer_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="1dp"
-        android:background="@drawable/lagerfeuer"
-        android:contentDescription="@string/lagerfeuer"
-        app:layout_constraintBottom_toTopOf="@+id/wald_button"
-        app:layout_constraintStart_toEndOf="@+id/dschungel_button"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/regen_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="50dp"
-        android:background="@drawable/regen"
-        android:contentDescription="@string/regen"
-        app:layout_constraintEnd_toStartOf="@+id/strand_button"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/berg_button" />
-
-    <ImageButton
-        android:id="@+id/strand_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/strand"
-        android:contentDescription="@string/strand"
-        app:layout_constraintEnd_toStartOf="@+id/wald_button"
-        app:layout_constraintStart_toEndOf="@+id/regen_button"
-        app:layout_constraintTop_toBottomOf="@+id/dschungel_button" />
-
-    <ImageButton
-        android:id="@+id/wald_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/wald"
-        android:contentDescription="@string/wald"
-        app:layout_constraintStart_toEndOf="@+id/strand_button"
-        app:layout_constraintTop_toBottomOf="@+id/lagerfeuer_button" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
-        android:layout_width="485dp"
-        android:layout_height="335dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
+        android:id="@+id/scrollView2"
+        android:layout_width="450dp"
+        android:layout_height="320dp"
+        android:layout_marginStart="108dp" 
+        android:layout_marginTop="140dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_width="450dp"
+            android:layout_height="320dp"
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@+id/guideline8"
+            app:layout_constraintTop_toBottomOf="@+id/guideline6">
+
+            <ImageButton
+                android:id="@+id/berg_button"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/berg"
+                android:contentDescription="@string/berge" />
+
+            <ImageButton
+                android:id="@+id/dschungel_button"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/dschungel"
+                android:contentDescription="@string/dschungel" />
+
+            <ImageButton
+                android:id="@+id/lagerfeuer_button"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/lagerfeuer"
+                android:contentDescription="@string/lagerfeuer" />
+
+            <ImageButton
+                android:id="@+id/regen_button"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/regen"
+                android:contentDescription="@string/regen" />
 
 
+            <ImageButton
+                android:id="@+id/strand_button"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/strand"
+                android:contentDescription="@string/strand" />
+
+            <ImageButton
+                android:id="@+id/wald_button"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/wald"
+                android:contentDescription="@string/wald" />
+
+        </LinearLayout>
     </ScrollView>
 
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="30dp"
-        android:backgroundTint="#006e8c"
-        android:contentDescription="@string/bluetooth"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bluetooth" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="312dp"
+        android:layout_height="119dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="90dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9">
 
-    <ImageButton
-        android:id="@+id/imageButton5"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="30dp"
-        android:backgroundTint="#006e8c"
-        android:contentDescription="@string/spotify"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/spotify" />
+        <ImageButton
+            android:id="@+id/imageButton4"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:backgroundTint="#006e8c"
+            android:contentDescription="@string/bluetooth"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/bluetooth" />
 
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="60dp"
-        android:backgroundTint="#006e8c"
-        android:contentDescription="@string/musiclibrary"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/musiclibrary" />
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:backgroundTint="#006e8c"
+            android:contentDescription="@string/musiclibrary"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/musiclibrary" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="297dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="556dp"
-        android:layout_marginEnd="84dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        <ImageButton
+            android:id="@+id/imageButton5"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:backgroundTint="#006e8c"
+            android:contentDescription="@string/spotify"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/spotify" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="385dp"
+        android:layout_height="96dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="71dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:backgroundTint="#006e8c"
+            android:scaleType="fitCenter"
+            app:srcCompat="@android:drawable/ic_media_play" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="297dp"
+            android:layout_height="70dp" />
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="135dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="666dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="456dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="#006e8c"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toStartOf="@+id/progressBar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_media_play" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="140dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_begin="704dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="106dp"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
