--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -17,6 +17,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintGuide_begin="1158dp" />
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="207dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="296dp"
+        android:layout_marginTop="76dp"
+        android:fontFamily="@font/bungee"
+        android:gravity="center"
+        android:text="@string/adjustPosition"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="185dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="788dp"
+        android:layout_marginTop="76dp"
+        android:fontFamily="@font/bungee_inline"
+        android:gravity="center"
+        android:text="@string/pickPosition"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button_save_favorite"
         android:layout_width="117dp"
@@ -49,9 +75,9 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="450dp"
-        android:layout_height="320dp"
-        android:layout_marginStart="108dp" 
+        android:layout_width="445dp"
+        android:layout_height="304dp"
+        android:layout_marginStart="108dp"
         android:layout_marginTop="140dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -178,7 +204,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="135dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="666dp"
+        app:layout_constraintGuide_end="604dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
