--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -20,9 +20,9 @@
         android:id="@+id/textView10"
         android:layout_width="185dp"
         android:layout_height="44dp"
-        android:layout_marginStart="788dp"
-        android:layout_marginTop="76dp"
-        android:fontFamily="@font/bungee_inline"
+        android:layout_marginStart="768dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/bungee"
         android:gravity="center"
         android:text="@string/pickPosition"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -254,8 +254,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="69dp"
-        android:layout_height="247dp"
+        android:layout_width="73dp"
+        android:layout_height="246dp"
         android:layout_marginTop="236dp"
         android:layout_marginEnd="684dp"
         android:orientation="vertical"
@@ -293,8 +293,8 @@
         android:id="@+id/textView9"
         android:layout_width="207dp"
         android:layout_height="41dp"
-        android:layout_marginStart="296dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginStart="304dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/bungee"
         android:gravity="center"
         android:text="@string/adjustPosition"
@@ -361,16 +361,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="135dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="136dp"
+        app:layout_constraintGuide_begin="120dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/stopchairButton_ID"
         android:layout_width="110dp"
         android:layout_height="120dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="56dp"
 
-        android:layout_marginBottom="164dp"
+        android:layout_marginBottom="212dp"
         android:backgroundTint="#D61D3F"
         android:backgroundTintMode="src_in"
         android:clickable="true"
@@ -382,8 +382,8 @@
         android:id="@+id/button"
         android:layout_width="117dp"
         android:layout_height="50dp"
-        android:layout_marginStart="348dp"
-        android:layout_marginTop="504dp"
+        android:layout_marginStart="332dp"
+        android:layout_marginTop="524dp"
         android:background="@drawable/rounded_corners"
         android:text="Save"
         app:layout_constraintStart_toStartOf="parent"
@@ -396,6 +396,6 @@
         android:layout_marginBottom="140dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_begin="579dp" />
+        app:layout_constraintGuide_begin="611dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
