--- a/app/src/main/res/drawable/stopbuttoncustom.xml
+++ b/app/src/main/res/drawable/stopbuttoncustom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#e61610"/>
+    <solid android:color="#d61d3f"/>
     <corners android:radius="60dp"/>
     <size android:height="10dp"/>
     <size android:width="10dp"/>
