--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -22,7 +22,7 @@
         android:layout_height="44dp"
         android:layout_marginStart="768dp"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/bungee"
+        android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/pickPosition"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -296,7 +296,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="304dp"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/bungee"
+        android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/adjustPosition"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -365,26 +365,12 @@
         app:layout_constraintGuide_begin="120dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/stopchairButton_ID"
-        android:layout_width="110dp"
-        android:layout_height="120dp"
-
-        android:layout_marginTop="536dp"
-        android:layout_marginEnd="40dp"
-        android:backgroundTint="#D61D3F"
-        android:backgroundTintMode="src_in"
-        android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="117dp"
         android:layout_height="50dp"
-        android:layout_marginStart="332dp"
-        android:layout_marginTop="524dp"
+        android:layout_marginStart="336dp"
+        android:layout_marginTop="576dp"
         android:background="@drawable/rounded_corners"
         android:text="Save"
         app:layout_constraintStart_toStartOf="parent"
@@ -397,7 +383,7 @@
         android:layout_marginBottom="140dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_begin="646dp" />
+        app:layout_constraintGuide_end="154dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline14"
