--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -392,4 +392,18 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="54dp" />
 
+    <ImageButton
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="512dp"
+        android:layout_marginEnd="40dp"
+        android:adjustViewBounds="true"
+        android:padding="10dp"
+        android:background="@drawable/stopbuttoncustom"
+        android:scaleType="centerInside"
+        android:src="@drawable/stopchair_text"
+        app:fabCustomSize="110dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
