--- a/app/src/main/res/layout-land/activity_light_screen.xml
+++ b/app/src/main/res/layout-land/activity_light_screen.xml
@@ -14,8 +14,8 @@
         android:id="@+id/light_for_ID"
         android:layout_width="157dp"
         android:layout_height="37dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="84dp"
         android:fontFamily="@font/bungee2"
         android:text="@string/light_for"
         android:textAlignment="center"
@@ -62,8 +62,8 @@
         android:id="@+id/stopChair_lightScreen_ID2"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="28dp"
         android:background="@drawable/stop_button"
         android:contentDescription="@string/stopchair"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,22 +110,23 @@
         android:id="@+id/saveAsFavoriteColor_ID"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginTop="28dp"
 
+        android:layout_marginStart="372dp"
+        android:layout_marginBottom="84dp"
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
         android:textColor="#000000"
         android:textSize="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/hex"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/hex"
-        app:layout_constraintTop_toBottomOf="@+id/hex" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_roomcolor_ID"
+        app:layout_constraintVertical_bias="0.993" />
 
     <Button
         android:id="@+id/showFavoriteButton_ID"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/orangeRed"
         android:text="@string/show_favorite"
@@ -133,8 +134,8 @@
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/saveAsFavoriteColor_ID"
         app:layout_constraintStart_toEndOf="@+id/saveAsFavoriteColor_ID"
-        app:layout_constraintTop_toBottomOf="@+id/hex"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/saveAsFavoriteColor_ID"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline10"
@@ -142,7 +143,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_end="154dp" />
+        app:layout_constraintGuide_end="119dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline11"
@@ -155,9 +156,9 @@
         android:id="@+id/guideline12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="114dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="162dp"
+        app:layout_constraintGuide_begin="110dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -185,14 +186,14 @@
         android:id="@+id/colorShowView_ID"
         android:layout_width="181dp"
         android:layout_height="47dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/bungee2"
         android:text="@string/color_code"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintHorizontal_bias="0.898"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -200,14 +201,14 @@
         android:id="@+id/pickfromcolorwheel"
         android:layout_width="301dp"
         android:layout_height="46dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/bungee2"
         android:text="@string/pick_from_colorwheel"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -337,7 +338,7 @@
         android:id="@+id/red"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/radiusred"
         android:foregroundGravity="center"
         android:gravity="center_horizontal|center_vertical"
@@ -378,7 +379,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="93dp" />
+        app:layout_constraintGuide_end="82dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline19"
